# mmocli

./: .clang-format  .gitignore  Gemfile  base64.cpp  confirm_server.rb  create_db.rb  main_cli.cpp  main_client.cpp  main_server.cpp  main_test.cpp  meson.build  native.ini  register_server.rb  utils.cpp  utils.hpp
.github/workflows/: default.yml
share/: config.ini
subprojects/: cppbase64.wrap  neo.wrap
